test-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-app
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - image: ealen/echo-server:latest
        name: echo-server
