test-app/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: test-app
spec:
  ports:
  - port: 8080
  selector:
    app: test-app
