test-app/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-app
  namespace: test-app
spec:
  hosts:
  - test-app.cmt-play.apa.comcast.net
  gateways:
  - test-app-gateway
  http:
  - route:
    - destination:
        host: test-app.test-app.svc.cluster.local
